--- a/githubProfile/package.json
+++ b/githubProfile/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
     "zustand": "^4.5.2"
   },
